# liveeditor

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/console/: console.cpp  console.hpp
src/entity/: base_entity.cpp  base_entity.hpp  params.hpp
src/logging/: logger.cpp  logger.hpp
src/rendering/: shader.cpp  shader.hpp
src/rendering/camera/: camera.cpp  camera.hpp
src/rendering/loaders/: obj_loader.hpp  shader_loader.hpp
src/rendering/mesh/: mesh.cpp  mesh.hpp
src/window/: window.cpp  window.hpp
src/world/: world.cpp  world.hpp
